fix(app): use numeric keyboard on mobile phones

--- a/frontend/scss/app/index.scss
+++ b/frontend/scss/app/index.scss
@@ -306,6 +306,7 @@ label {
 
 input {
   &[type='number'],
+  &[type='tel'],
   &[type='email'],
   &[type='password'],
   &[type='text'] {
